# RedisGears

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Dockerfile  Dockerfile.arm  Dockerfile.arm64-xbuild  Dockerfile.focal  Dockerfile.jammy  Dockerfile.qemu-arm64  Dockerfile.rhel8  Dockerfile.rhel9  LICENSE  Makefile  Makefile.1  NOTICE.txt  README.md  append_deps.py  commands.json  commands.yml  commit.txt  deny.toml  getbranch  getos.py  getver  leakcheck.supp  mkdocs.yml  pack.sh  ramp.yml  ramp_python.yml  redisd  requirements.txt  run.sh  system-setup.py
.cargo/: config.toml
.circleci/: config.yml
.github/: release-drafter-config.yml  wordlist.txt
.github/workflows/: AMZN2_REUSABLE.yml  CENTOS_7_REUSABLE.yml  CENTOS_8_REUSABLE.yml  DEBIAN_BULLSEYE_REUSABLE.yml  MACOS_REUSABLE.yml  REUSABLE_DOCKER_BUILDER.yml  UBUNTU_BIONIC_REUSABLE.yml  UBUNTU_FOCAL_REUSABLE.yml  UBUNTU_JAMMY_REUSABLE.yml  branch_merge-benchmark.yml  branch_merge.yml  centos_7.yml  centos_8.yml  ci.yml  codeql.yml  deploy-docs.yaml  dockers.yml  docs-ih.yml  event-dispatch.yaml  event-tag.yaml  flow-gears.yaml  gears-dispatch.yaml  integration.yml  macos_latest.yml  master_build_and_test.yml  msrv.yml  nighly_build_and_test.yml  nightly-benchmark-v8-plugin-main.yml  nightly-benchmark.yml  nightly.yml  platforms.yml  pr_build_and_test.yml  pull_request.yml  release.yml  rust.yml  snapshot.yml  trigger-benchmark.yml  ubuntu_bionic.yml  ubuntu_focal.yml  ubuntu_latest.yml  (+1 more)
cmake/: FindLibevent.cmake
dockerbuilds/: Dockerfile.bionic  Dockerfile.bullseye  Dockerfile.focal  Dockerfile.jammy  Dockerfile.rockylinux8  README.md  base.incl  build_and_test.incl  copyfrom.incl  dockerfile.debian.tmpl  dockerfile.rhel.tmpl  generate.py  pip.incl  publish.incl
docs/: Downloads.md  async_await_advance_topics.md  build_instructions.md  build_insturctions.md  clients.md  cluster_support.md  commands.md  commands_hook.md  configuration.md  contrib.md  create_development_environment.md  databse_triggers.md  examples.md  function_advance_topics.md  functions.md  gears_build_doc.md  gears_streaming.md  glossary.md  index.md  intro.md  isolation.md  isolation_technics.md  js_api.md  keyspace_triggers.md  miss_event.md  operations.md  overview.md  quickstart.md  readers.md  redisai.md  requirements.txt  runtime.md  stream_processing.md  stream_triggers.md  subinterpreters.md  sync_and_async_run.md
docs/commands/: tfcall.md  tfcallasync.md  tfunction-delete.md  tfunction-list.md  tfunction-load.md
docs/docs/: Configuration.md  Debugging.md  Development.md  Examples.md  Known_Limitations.md  Quick_Start.md  Quick_Start_CLI.md  Quick_Start_RI.md  _index.md
docs/snippets/: conftest.py  test_snippets.py
include/: async.h  libevent.h
js_api/: deploy.js  gears-api.d.ts  gears-api.js  package.json
licenses/: RSALv2.txt  SSPLv1.txt
pyenv/: Pipfile
pytest/: Pipfile  common.py  connection.py  generate_tests_cert.sh  includes.py  run_tests.sh  run_tests_tls.sh  run_tests_valgrind.sh  test_async.py  test_basics.py  test_consensus.py  test_errors.py  test_network.py  test_profile.py  test_rdb_compatibility.py  test_register.py  test_requirements.py  test_sessions.py
pytests/: common.py  requirements.txt  run_tests.sh  test_acl.py  test_basics.py  test_call_async.py  test_cluster.py  test_config.py  test_debugging.py  test_errors.py  test_noop.py  test_notifications_consumers.py  test_stream_reader.py  test_verbose_error_reporting.py
recipes/: gears.py  pack.sh  write_behind_mysql.py
redisai_rs/: Cargo.toml  build.rs
redisai_rs/src/: lib.rs
redisai_rs/src/redisai/: mod.rs  redisai_model.rs  redisai_script.rs  redisai_tensor.rs
redisai_rs/src/redisai_raw/: mod.rs  redisai.c  redisai.h  redismodule.h
redisgears_core/: Cargo.toml  build.rs
redisgears_core/src/: background_run_ctx.rs  background_run_scope_guard.rs  compiled_library_api.rs  config.rs  debugging.rs  function_del_command.rs  function_list_command.rs  function_load_command.rs  gears_box.rs  keys_notifications.rs  keys_notifications_ctx.rs  lib.rs  packer.rs  rdb.rs  run_ctx.rs  stream_reader.rs  stream_run_ctx.rs
redisgears_core/src/full/: background_run_ctx.rs  background_run_scope_guard.rs  compiled_library_api.rs  debugging.rs  function_del_command.rs  function_list_command.rs  function_load_command.rs  keys_notifications.rs  keys_notifications_ctx.rs  mod.rs  rdb.rs  run_ctx.rs  stream_reader.rs  stream_run_ctx.rs
redisgears_core/src/noop/: mod.rs
redisgears_js_api/: deploy.js
redisgears_macros_internals/: Cargo.toml
redisgears_macros_internals/src/: allow_deny_lists.rs  js_api_function.rs  lib.rs
redisgears_plugin_api/: Cargo.toml
redisgears_plugin_api/src/: lib.rs
redisgears_plugin_api/src/redisgears_plugin_api/: backend_ctx.rs  function_ctx.rs  keys_notifications_consumer_ctx.rs  load_library_ctx.rs  mod.rs  prologue.rs  redisai_interface.rs  run_function_ctx.rs  stream_ctx.rs
redisgears_v8_plugin/: Cargo.toml
redisgears_v8_plugin/js_api/: gears-api.d.ts  package.json
redisgears_v8_plugin/src/: lib.rs  v8_api.rs  v8_backend.rs  v8_function_ctx.rs  v8_native_functions.rs  v8_notifications_ctx.rs  v8_redisai.rs  v8_script_ctx.rs  v8_stream_ctx.rs
rfcs/: 1-js-api-version.md  2-async-api-refactoring.md  2-command-call.md  3-add-event-notification-flags.md  3-ksn-api.md
sbin/: append_deps.py  getos.py  getver  pack.sh  publish.py  setup  system-setup.py
scripts/: pyenv  redisd
src/: GearsBuilder.py  cloudpickle.py  cluster.c  cluster.h  command_hook.c  command_hook.h  command_hooker.c  command_hooker.h  commands.c  commands.h  common.c  common.h  config.c  config.h  configuration_store.c  configuration_store.h  consensus.c  consensus.h  crc16.c  debug.c  deps-args.c  distributed_data_type.c  distributed_data_type.h  distributed_registrations_dict.c  distributed_registrations_dict.h  example.c  example.h  execution_plan.c  execution_plan.h  extractors.c  filters.c  global.c  globals.c  globals.h  keys_reader.c  keys_reader.h  keys_writer.c  lock_handler.c  lock_handler.h  mappers.c  (+28 more)
(+425 files in other folders)
