[workspace]

members = [
    "redisgears_core",
    "redisgears_plugin_api",
    "redisgears_v8_plugin",
    "redisai_rs",
    "redisgears_macros_internals"
]

[workspace.dependencies]
redis-module = { git = "https://github.com/RedisLabsModules/redismodule-rs", branch = "master", default-features = false, features = ["min-redis-compatibility-version-7-2"] }
redis-module-macros = { git = "https://github.com/RedisLabsModules/redismodule-rs", branch = "master" }
