[package]
name = "redisai_rs"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-RSALv2 OR SSPL-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis-module = { workspace = true }
redis-module-macros = { workspace = true }
redisgears_plugin_api = { path = "../redisgears_plugin_api/" }

[build-dependencies]
bindgen = "0.65"
cc = "1"

[lib]
crate-type = ["rlib"]
name = "redisai_rs"
