[package]
name = "redisgears_core"
version = "99.99.99"
edition = "2021"
license = "LicenseRef-RSALv2 OR SSPL-1.0"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
redis-module = { workspace = true }
redis-module-macros = { workspace = true }
lib_mr = { git = "https://github.com/RedisGears/LibMR.git", branch = "master", default-features = false, features = ["min-redis-compatibility-version-7-2"] }
lib_mr_derive = { git = "https://github.com/RedisGears/LibMR.git", branch = "master" }
linkme = "0.3"
redisai_rs = { path = "../redisai_rs" }
libloading = "0.7"
redisgears_plugin_api = { path="../redisgears_plugin_api/" }
threadpool = "1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
sha256 = "1"
lazy_static = "1"
log = "0.4"
byte-unit = "4"
serde_json = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }

[build-dependencies]
regex = "1"
clap = { version = "4", features = ["cargo"]}
os_info = { version = "3", default-features = false }

[lib]
crate-type = ["cdylib", "rlib"]
name = "redisgears"

[[bin]]
name = "packer"
path = "src/packer.rs"
