[package]
name = "redisgears_core"
version = "2.0.17"
edition = "2021"
license = "Redis Source Available License 2.0 (RSALv2) or the Server Side Public License v1 (SSPLv1)"
rust-version = "1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
redis-module = { workspace = true }
redis-module-macros = { workspace = true }
lib_mr = { git = "https://github.com/RedisGears/LibMR.git", branch = "master", default-features = false, features = ["min-redis-compatibility-version-7-2"] }
lib_mr_derive = { git = "https://github.com/RedisGears/LibMR.git", branch = "master" }
linkme = "0.3"
redisai_rs = { path = "../redisai_rs" }
libloading = "0.7"
redisgears_plugin_api = { path="../redisgears_plugin_api/" }
threadpool = "1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
sha256 = "1"
lazy_static = "1"
log = "0.4"
byte-unit = "4"
serde_json = "1"
# DO NOT CHANGE to avoid security issues. This exact version
# specification is required for the second level dependencies
# to use exactly this version too, so that the dependencies of
# this project will not be able to compromise it.
serde = { version = "=1.0.171", features = ["derive"] }
serde_derive = "=1.0.171"

[build-dependencies]
regex = "1"
clap = "~2"
os_info = { version = "3", default-features = false }

[lib]
crate-type = ["cdylib", "rlib"]
name = "redisgears"

[[bin]]
name = "packer"
path = "src/packer.rs"
