[package]
name = "redisgears-macros-internals"
version = "0.1.0"
authors = ["Meir Shpilraien <meir@redis.com>"]
edition = "2021"
description = "A macros crate for redisgears"
license = "LicenseRef-RSALv2 OR SSPL-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1"
lazy_static = "1"
proc-macro2 = "1"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_syn = "0.1"

[lib]
name = "redisgears_macros_internals"
path = "src/lib.rs"
proc-macro = true
