[package]
name = "redisgears_plugin_api"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-RSALv2 OR SSPL-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis-module = { workspace = true }
bitflags = "1"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
log = "0.4"

[build-dependencies]
