[package]
name = "redisgears_v8_plugin"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-RSALv2 OR SSPL-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis-module = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
v8_rs = { git = "https://github.com/RedisGears/v8-rs" }
v8_rs_derive = { git = "https://github.com/RedisGears/v8-rs" }
redisgears_plugin_api = { path = "../redisgears_plugin_api/" }
redisgears-macros-internals = { path = "../redisgears_macros_internals/" }
lazy_static = "1"
bitflags = "2"
log = "0.4"

[build-dependencies]

[lib]
crate-type = ["cdylib", "rlib"]
name = "redisgears_v8_plugin"
